Add exceptions for patch 48515
refer to: https://gerrit.opnfv.org/gerrit/#/c/48515/

Change-Id: Iea0be10f0a0401669204d27abcda8d4e46efaa66
Signed-off-by: Julien <zhang.jun3g@zte.com.cn>

--- a/exceptions/releng.yaml
+++ b/exceptions/releng.yaml
@@ -290,6 +290,7 @@ file_audits:
     - bifrost_ssh_private_key
     - cacheValues
     - elif type wget >/dev/null
+    - eval \$(cat /\$WORKSPACE/installer_track.txt)
     - eval_collection
     - eval_db
     - evaluate
