--- a/ignore_list.yaml
+++ b/ignore_list.yaml
@@ -6,6 +6,8 @@ file_audits:
   file_names: [nullvalue]
   file_contents:
     - ^#
+    - \bwget\s+\\
+    - \bcurl\s+\\
     - git clone.+\.openstack\.org
     - git clone.+gerrit\.opnfv\.org
     - wget.+build\.opnfv\.org
