Stop package installs of curl|wget getting flagged
Way to many instances of `curl \` as part of an rpm / apt-get line
are getting flagged. This removes them from being reported.

Change-Id: I4d06146f9a7d826c53e5bb4d71178223ca5e089d
Signed-off-by: lhinds <lhinds@redhat.com>

--- a/ignore_list.yaml
+++ b/ignore_list.yaml
@@ -6,6 +6,7 @@ file_audits:
   file_names: [nullvalue]
   file_contents:
     - ^#
+    - \bcurl|wget\s+\\
     - git clone.+\.openstack\.org
     - git clone.+gerrit\.opnfv\.org
     - wget.+build\.opnfv\.org
