Add Exception for Dovetail Docker-Compose File
The socket mount to '/tmp' is used by the jwilder/nginx-proxy container
to query the Docker daemon in order to automatically create nginx
configs for a container.

Change-Id: I3368ad7f77914811e30e98db278e8d6550df653c
Signed-off-by: Trevor Bramwell <tbramwell@linuxfoundation.org>

--- a/exceptions/dovetail.yaml
+++ b/exceptions/dovetail.yaml
@@ -53,4 +53,5 @@ binaries:
 
 file_audits:
   file_names: [nullvalue]
-  file_contents: [nullvalue]
+  file_contents:
+    - '\/var\/run\/docker\.sock\:\/tmp\/docker\.sock\:ro'
