[daisy] Add wget related exceptions for Daisy
Violation this exceptions is trying to solve is wget plus variables.
But I think what I am doing is definitly wrong, because the value of
variables can change.

Sorry but I really do not know how to deal with violations like
these, so raise the question and tring to find answer. Thanks!

Change-Id: I5b44b15510e4cde8979b914f06e866366f0a4e4b
Signed-off-by: Zhijiang Hu <hu.zhijiang@zte.com.cn>

--- a/exceptions/daisy.yaml
+++ b/exceptions/daisy.yaml
@@ -10,4 +10,11 @@ binaries:
 
 file_audits:
   file_names: [nullvalue]
-  file_contents: [nullvalue]
+  file_contents:
+      - wget \\
+      - wget \$sha256sum_url
+      - wget -nc --progress=dot\:giga \$image_xz_url
+      - wget --progress=dot\:giga \$\{file_url\}
+      - wget \$\{md5_url\}
+      - wget --spider \$file_url -o tmp_filesize
+      - wget \$\{sha512sum_url\}
