Fix Pharos warning issues
There are configuration names matches the regex in the check lists.
Add exceptions for these rules.

Change-Id: I331a2dab117b2c90de4e9783d805adf3c31914ba
Signed-off-by: Julien <zhang.jun3g@zte.com.cn>

--- a/exceptions/pharos.yaml
+++ b/exceptions/pharos.yaml
@@ -57,4 +57,10 @@ binaries:
 
 file_audits:
   file_names: [nullvalue]
-  file_contents: [nullvalue]
+  file_contents:
+    - pkcs7_private_key\: \/etc\/eyaml_keys\/private_key.pkcs7.pem
+    - \/tmp\/out\.yml
+    - daisy_passwd
+    - cpu_cflags\:.*$
+    - address\: 0\.0\.0\.0
+
