Enable Fuel exceptions
-Add fuel project to master_list
-Update fuel binary exceptions
-Add content exceptions regex

Change-Id: I634787116dbf0f4bca0b07d847a72ef468b851ce
Signed-off-by: Guillermo Herrero <guillermo.herrero@enea.com>

--- a/master_list.yaml
+++ b/master_list.yaml
@@ -242,6 +242,7 @@ project_exceptions:
   - enfv: exceptions/enfv.yaml
   - escalator: exceptions/escalator.yaml
   - fds: exceptions/fds.yaml
+  - fuel: exceptions/fuel.yaml
   - functest: exceptions/functest.yaml
   - octopus: exceptions/octopus.yaml
   - pharos: exceptions/pharos.yaml
