--- a/exceptions/barometer.yaml
+++ b/exceptions/barometer.yaml
@@ -25,4 +25,5 @@ binaries:
 
 file_audits:
   file_names: [nullvalue]
-  file_contents: [nullvalue]
+  file_contents:
+    - $(AT)git clone $(COLLECTD_URL)
